# sprout-emergence-prediction

./: .gitignore  README.md  create_dataset.py  emergence_prediction.py  postprocess_emergence_predictions.py  pyproject.toml  requirements.txt
config/: paths.toml
pipeline/1_segmentation/: 1-0_test_detectron_model.py  1-1_segment_boxes.py
pipeline/2_cropping/: 2-1_crop_segments.py
pipeline/3_timeseries_dataset/: 3-1_timeseries_dataset.py
pipeline/4_emergence_predictions/: 4-1_emergence_predictions.py
pipeline/5_prediction_postprocessing/: 5-1_postprocess_emergence_predictions.py
src/: path_config.py
src/1_segmentation/: 1-0_test_detectron_model.py  1-1_segment_boxes.py
src/2_cropping/: 2-1_crop_segments.py
src/3_timeseries_dataset/: 3-1_timeseries_dataset.py
src/emergence/: __init__.py  path_config.py
src/emergence/stages/: __init__.py  cropping.py  emergence_prediction_postprocessing.py  emergence_predictions.py  segmentation.py  timeseries_dataset.py
src/fenotypizace/: __init__.py  path_config.py
src/fenotypizace/stages/: __init__.py  cropping.py  emergence_predictions.py  segmentation.py  timeseries_dataset.py
src_finetuning/0-annotation/: annotation.md
src_finetuning/1-segmentation/: 1_1-finetune_detectron_model.ipynb  1_1-train_detectron_model.ipynb  1_2-segment_boxes.py
src_finetuning/2-cropping/: 2_1-finetune_yolov8_mode.ipynb  2_1-train_yolov8_mode.ipynb  2_2-crop_segments.py
src_finetuning/3-preprocessing/: 3_1-create_npy_datasets.py
src_finetuning/4-time_series/: 4_1-finetune_time_series.ipynb  4_1-train_time_series.ipynb
src_finetuning/5-evaluation/: 5_1-evaluation.py  5_2-combined_evaluation_report.ipynb  5_3-post-evaluation.py  perBoxEvaluation.ipynb  report - merge excels.ipynb
src_train/0-annotation/: annotation.md
src_train/1-segmentation/: 1_1-train_detectron_model.ipynb
src_train/2-cropping/: 2_1-train_yolov8_mode.ipynb
src_train/3-preprocessing/: 3_1-create_npy_datasets.py
src_train/4-time_series/: 4_1-train_time_series.ipynb
src_train/5-evaluation/: 5_1-evaluation.py  5_2-combined_evaluation_report.ipynb  5_3-post-evaluation.py
