[project]
name = "sprout-emergence-prediction"
version = "1.0.0"
description = "Emergence prediction for sprout growth library"

readme = "README.md"

authors = [
    { name = "EaZynite", email = "jakubvk@gmail.com" }
]

requires-python = "==3.11.*"

dependencies = [
    "absl-py==2.1.0",
    "antlr4-python3-runtime==4.9.3",
    "astunparse==1.6.3",
    "black==25.1.0",
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "detectron2",
    "et-xmlfile==2.0.0",
    "filelock==3.17.0",
    "flatbuffers==25.1.24",
    "fonttools==4.55.8",
    "fsspec==2025.2.0",
    "fvcore==0.1.5.post20221221",
    "gast==0.6.0",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "google-pasta==0.2.0",
    "grpcio==1.70.0",
    "h5py==3.12.1",
    "hydra-core==1.3.2",
    "idna==3.10",
    "iopath==0.1.9",
    "jinja2==3.1.5",
    "keras==2.15.0",
    "keras-tcn==3.5.0",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "ml-dtypes==0.3.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "oauthlib==3.2.2",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "opt-einsum==3.4.0",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pillow==11.1.0",
    "portalocker==3.1.1",
    "protobuf==4.25.6",
    "py-cpuinfo==9.0.0",
    "pyarrow==19.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycocotools==2.0.8",
    "pyparsing==3.2.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "scikit-image>=0.25.2",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.15.1",
    "tensorflow-addons==0.23.0",
    "tensorflow-estimator==2.15.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.5.0",
    "tomli==2.2.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "triton==3.2.0",
    "typeguard==2.13.3",
    "tzdata==2025.1",
    "ultralytics==8.3.70",
    "ultralytics-thop==2.0.14",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
    "wrapt==1.14.1",
    "yacs==0.1.8",
]

[tool.uv.extra-build-dependencies]
detectron2 = ["torch"]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "uv>=0.11.8",
]

[build-system]
requires = ["setuptools<81"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["emergence*"]

[tool.ruff]
exclude = ["data/**",
    ".venv/**",
    "models/**"
]

